chore(build-folder):produced build folder and add route for user to delete account
